--- a/q/274485.html
+++ b/q/274485.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>026</td><td>Kotlin 2.0.0</td><td>240731T143136Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274600#274600">colmmurp</a></td></tr>
+<tr d-ix="0"><td>019</td><td>Kotlin 2.0.0</td><td>240731T143136Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274600#274600">colmmurp</a></td></tr>
 <tr d-ix="1"><td>022</td><td>Perl 5 + 0513pF</td><td>240728T204448Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274526#274526">Dom Hast</a></td></tr>
 <tr d-ix="2"><td>015</td><td>Perl 5 MListUtil=uniq pF</td><td>240729T152917Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274557#274557">Xcali</a></td></tr>
 <tr d-ix="3"><td>035</td><td>Java 21</td><td>240729T143539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274554#274554">David Co</a></td></tr>
@@ -54,11 +54,14 @@
 <tr d-ix="25"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
 <tr d-ix="26"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Kotlin 2.0.0, 26 Bytes</h1>
+<div id="pu0" class="pu"><h1>Kotlin 2.0.0, <s>26</s> 19 Bytes</h1>
 <pre><code>{LinkedHashSet(it).last()}
 </code></pre>
 <p>A trivial port of <a href="https://codegolf.stackexchange.com/users/794/david-conrad">David Conrad</a>'s Java solution. Expects a <code>List&lt;Char&gt;</code> and outputs a <code>Char</code></p>
-<p><a href="https://pl.kotl.in/g00NLqIB2" rel="nofollow noreferrer">Try it Online</a></p>
+<pre><code>{it.toSet().last()}
+</code></pre>
+<p>Saves 7 Bytes by using a <code>Set</code> instead of a <code>LinkedHashSet</code>. <code>Sequence.toSet()</code> preserves the original iteration order according to the <a href="https://kotlinlang.org/api/core/kotlin-stdlib/kotlin.sequences/to-set.html" rel="nofollow noreferrer">docs</a></p>
+<p><a href="https://pl.kotl.in/ZW6Jp27Ov" rel="nofollow noreferrer">Try it Online</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-0513pF</code>, 22 bytes</h1>
 <p>-3 bytes thanks to <a href="https://codegolf.stackexchange.com/users/72767/xcali">@Xcali</a>!</p>
