--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240731T144019Z
+"   /golfscore                                      20240731T152938Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/270235.html">Swap letter cases                               : 0270235</a>
 <a href="q/274485.html">Find the newest element                         : 0274485</a>
 <a href="q/274596.html">Is this a valid Irish word?                     : 0274596</a>
 <a href="q/245318.html">Draw the Ukrainian Flag                         : 0245318</a>
