--- a/q/74096.html
+++ b/q/74096.html
@@ -87,8 +87,8 @@ b&quot;hello world&quot;[n]as char // char
 <tr>
 <th>Code</th>
 <th>Bytes</th>
-<th><code>String</code></th>
 <th><code>&amp;str</code></th>
+<th><code>String</code></th>
 <th>Consumes</th>
 <th>Return Type</th>
 </tr>
@@ -162,13 +162,14 @@ b&quot;hello world&quot;[n]as char // char
 </table></div>
 <h3>Multi Use</h3>
 <p>For assignment to a variable if you need to take multiple slices and/or modifications. All of these return a format compatible with standard <code>x[n]</code> indexing.</p>
+<p>All the ones that return <code>u8</code> will fail for Unicode text.</p>
 <div class="s-table-container"><table class="s-table">
 <thead>
 <tr>
 <th>Code</th>
 <th>Bytes</th>
-<th><code>String</code></th>
 <th><code>&amp;str</code></th>
+<th><code>String</code></th>
 <th>Consumes</th>
 <th>Return Type</th>
 </tr>
@@ -183,10 +184,18 @@ b&quot;hello world&quot;[n]as char // char
 <td><code>&amp;[u8]</code></td>
 </tr>
 <tr>
+<td><code>s.chars().collect::Vec&lt;_&gt;()</code></td>
+<td>27</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+<td><code>Vec&lt;char&gt;</code></td>
+</tr>
+<tr>
 <td><code>unsafe{s.as_mut_bytes()}</code></td>
 <td>24</td>
 <td>Yes</td>
-<td>No</td>
+<td>Yes</td>
 <td>No</td>
 <td><code>&amp;mut[u8]</code></td>
 </tr>
