--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240731T164426Z
+"   /golfscore                                      20240731T164936Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
-<a href="q/26739.html">Super speedy totient function                   : 0026739</a>
+<a href="q/26739.html">Super speedy totient range                      : 0026739</a>
 <a href="q/74096.html">Tips for golfing in Rust                        : 0074096</a>
 <a href="q/270235.html">Swap letter cases                               : 0270235</a>
 <a href="q/274485.html">Find the newest element                         : 0274485</a>
