--- a/q/274596.html
+++ b/q/274596.html
@@ -26,9 +26,38 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>065</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
+<tr d-ix="0"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
+<tr d-ix="1"><td>065</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 65 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 30 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>Œlœṣ⁾aeKe€ØCœpƊO%65%9Ḃj€-FSƝ1e
+</code></pre>
+<p>A monadic Link that accepts a list of the specified characters and yields <code>0</code> for valid or <code>1</code> for invalid.</p>
+<p><strong><a href="https://tio.run/##FY2xSgNBEIb7eYo0KQQtLCJYKCRCIFhYpLKcu5vs7jHZDXtrYZekESxNY2GKw0qwU0ERLFwu73H3IptJNTMf/zd/Scz3KTVP3Gzan9du9Yd0Td36PT5fNZvF7vGmfzbon7ff61LgyXi6255San8//7@O40PZLV96F5e9brk9uk2pIPRBx9p4wlwjzLHwCPZOjhBrCwodB4Sc0Fqs0ARNUNlYz7UAmMUPWYwHRgpCJJnFN/QwIhTNWAI9dIeRITMETwRKKchdQcrxDAo6fEc2ldjOwHA0AbQVOcg8SRnHeg8" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<h4>How?</h4>
+<pre><code>Œlœṣ⁾aeKe€ØCœpƊO%65%9Ḃj€-FSƝ1e - Link: list of characters (limited to those specified)
+Œl                             - convert to lowercase (works for fada e.g.: 'Ó' -&gt; 'ó')
+    ⁾ae                        - &quot;ae&quot;
+  œṣ                           - split {Lowercased} at occurrences of {&quot;ae&quot;}
+       K                       - join with spaces (we'll treat this as a wide vowel later)
+              Ɗ                - last three links as a monad:
+          ØC                   -   consonants -&gt; &quot;BCD...Zbcd...z&quot;
+         €                     -   for each {C in our string}:
+        e                      -     {C} exists in {&quot;BCD...Zbcd...z&quot;}?
+            œp                 -   partition {our string} at truthy indices of {that}
+                                   discarding the borders
+               O               - cast to ordinals
+                %65            - mod 65
+                   %9          - mod 9
+                     Ḃ         - mod 2
+                      j€-      - join each with -1
+                         F     - flatten
+                           Ɲ   - for neighbouring pairs:
+                          S    -   sum
+                            1e - contains 1?
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 65 bytes</h1>
 <p>Inverted truthy and falsey.</p>
 <pre class="lang-perl prettyprint-override"><code>sub{$_=NFD$_;s/\pM//ug;s/[^aeiou]+/_/gi;/[aou]_[ei]|[ei]_[aou]/i}
 </code></pre>
