--- a/q/274596.html
+++ b/q/274596.html
@@ -26,16 +26,41 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
-<tr d-ix="1"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
+<tr d-ix="0"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
+<tr d-ix="1"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
+<tr d-ix="2"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
+<pre><code>ae|[aáoó]
+#@
+[eéiíuú]
+@#
+i)1`(#|@)\w+\1
+</code></pre>
+<p><a href="https://tio.run/##LY2xjsIwEET7@Y0ICUTFHwSk0@m@AZCYJIttydiSY0TDz7hMQUVHux@Wc07X7O7MvtEkyS5wXq2/LzPleaSWqO8zmhZH0cnp666fM9oGbrO7rJtnuzk9tqfdPA/ClK0Wl4S9JW4cEhHuVWQtAYbRZ6IXhsCRLlvBGLTcbDVw1Xc9XIKn5OpUstOJCQdhjbkgsPu4rI7eIycRGGMq/vWP93EQE/0Vgyw99G6sj@iwP/yAYZSILkmt9VpAnfoILfI3F/EL" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Outputs an inverted result, i.e. <code>0</code> for valid, <code>1</code> for invalid. Explanation:</p>
+<pre><code>i)`
+</code></pre>
+<p>Run the whole script case-insensitively.</p>
+<pre><code>ae|[aáoó]
+#@
+</code></pre>
+<p>Mark broad vowels with <code>#@</code>.</p>
+<pre><code>[eéiíuú]
+@#
+</code></pre>
+<p>Mark slender vowels with <code>@#</code>.</p>
+<pre><code>1`(#|@)\w+\1
+</code></pre>
+<p>Check for consonants surrounded by vowels of different types (which equates to having surrounding symbols of the same type).</p>
+<p>Note that Retina defaults to the ISO-8859-1 code page so all of the Irish vowels only cost one byte.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
 <p>Inverted truthy and falsey.</p>
 <pre class="lang-perl prettyprint-override"><code>sub{s/ae/a/ig;$_=NFD$_;s/\pM//ug;s/[^aeiou]+/_/gi;/[aou]_[ei]|[ei]_[aou]/i}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VVLBbtswDAV25DfsIHhBkWJrfS3suWi7LsAwrDssPSWZwTi0LcCWMknGkKX9kl0SYD30vE_wV3RfM8pxs-wi8VGP5CPFn7-WZKrN01FjSTQuP4u9catkphcURTfa1FjJHxTXKzHIkwemnJw9fbTNfG1DpBBDWcSDNLkZXQ_S2IbT5acwbAq2Jl-RpG5mr8M0LGQcTpBBOiE5u_NH2uFQ3u9S_nnx0pe4cKZxpSQrEvHt-wQWhMaV7VYawqxEqHFhEFTDwLVbBQXqyiFkhEqhRelKAqvabV2yA_L2NxvSQIXk2MPMefuIBq4IOUwqgvJS-2uOVQXOEEFRFEx_39NnMXhVOVaWVs-i_GgKXeWszhfn-VhmawmXVx8AlSUNc0OspWq3gO1jpqHdUnd2gJMujVROBGPf7UpkaLnj4HTf_WkAI1_y30uvgB8g-D-c6UkSTRW73XCf4XhPmqrRLvaA1Wc7JL1rrNO1kGrZuAPqID0WuTbi7XkM_OnCrcHD4QX71zCXquZhDL-Mrz_fjt8Ekd-ggNMK4fdFFzwxXose2oTtV7wpPuuz03hKfnI-HNjO1wvi2IgfOxX30C_JZrO7_wI" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 30 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 30 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Œlœṣ⁾aeKe€ØCœpƊO%65%9Ḃj€-FSƝ1e
 </code></pre>
 <p>A monadic Link that accepts a list of the specified characters and yields <code>0</code> for valid or <code>1</code> for invalid.</p>
