--- a/q/274596.html
+++ b/q/274596.html
@@ -26,11 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
-<tr d-ix="1"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
-<tr d-ix="2"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
+<tr d-ix="0"><td>078</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
+<tr d-ix="2"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
+<tr d-ix="3"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 78 bytes</h1>
+<pre><code>fno(wR&quot;ita ati&quot;)&lt;fiw&lt;gkx&quot;(ae_|[eiéí]{i_|([^aeiouáéíóú]+){t_|.{a_)*&quot;&lt;mtL
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=ZY8xTsNAEEV7n2LYyoZATeHcgMKitYw1xLPeUdbesFkrSPZNaOwCIRdU6SjZU-Q2EBzFkahG7838L83bh8LtmrTuD1dcbYx18NKgZslUQGJJNwUFp0Xy3jh5e39I5FLWJtw9CnYI6FhEseRdXK5fRYiUdymxH_1n1nLehekTEpvGD0fl9_4ru4lal3d3LebRtYgr93Dq_a6Qa1hCYQKAKodwYyEGGf0SQApCEzqFtfjjBYiC0DrlB7aEK4Vnr5GOd2420u8rhWzP4tmPOFNZliKYW_VF0hI7pf0wJ_8Z9OPKTJRNn_T9NH8A" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h2>Explanation</h2>
+<ul>
+<li><code>mtL</code> convert to lowercase.</li>
+<li><code>gkx&quot;</code>...<code>&quot;</code> use a regex to replace broad vowels with <code>a</code>, slender with <code>i</code>, and consonant clusters with <code>t</code>.</li>
+<li><code>fiw</code> determine if it has an infix ...</li>
+<li><code>fno(wR&quot;ita ati&quot;)</code> ... of either <code>ita</code> or <code>ati</code>.</li>
+</ul>
+<h1>Reflection</h1>
+<ul>
+<li>There should be a version of <code>gkY</code> but for regexes.</li>
+<li>I could probably add a builtin for <code>&quot;aeiouáéíóú&quot;</code>. If it were 2 bytes or shorter it would save bytes in this solution.</li>
+<li>This regex reminds me of the regex used <a href="https://codegolf.stackexchange.com/a/270277/56656">here</a>. There might be a way to systematize this a bit to save bytes.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
 <pre><code>ae|[aáoó]
 #@
 [eéiíuú]
@@ -54,13 +73,13 @@ i)1`(#|@)\w+\1
 <p>Check for consonants surrounded by vowels of different types (which equates to having surrounding symbols of the same type).</p>
 <p>Note that Retina defaults to the ISO-8859-1 code page so all of the Irish vowels only cost one byte.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
 <p>Inverted truthy and falsey.</p>
 <pre class="lang-perl prettyprint-override"><code>sub{s/ae/a/ig;$_=NFD$_;s/\pM//ug;s/[^aeiou]+/_/gi;/[aou]_[ei]|[ei]_[aou]/i}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VVLBbtswDAV25DfsIHhBkWJrfS3suWi7LsAwrDssPSWZwTi0LcCWMknGkKX9kl0SYD30vE_wV3RfM8pxs-wi8VGP5CPFn7-WZKrN01FjSTQuP4u9catkphcURTfa1FjJHxTXKzHIkwemnJw9fbTNfG1DpBBDWcSDNLkZXQ_S2IbT5acwbAq2Jl-RpG5mr8M0LGQcTpBBOiE5u_NH2uFQ3u9S_nnx0pe4cKZxpSQrEvHt-wQWhMaV7VYawqxEqHFhEFTDwLVbBQXqyiFkhEqhRelKAqvabV2yA_L2NxvSQIXk2MPMefuIBq4IOUwqgvJS-2uOVQXOEEFRFEx_39NnMXhVOVaWVs-i_GgKXeWszhfn-VhmawmXVx8AlSUNc0OspWq3gO1jpqHdUnd2gJMujVROBGPf7UpkaLnj4HTf_WkAI1_y30uvgB8g-D-c6UkSTRW73XCf4XhPmqrRLvaA1Wc7JL1rrNO1kGrZuAPqID0WuTbi7XkM_OnCrcHD4QX71zCXquZhDL-Mrz_fjt8Ekd-ggNMK4fdFFzwxXose2oTtV7wpPuuz03hKfnI-HNjO1wvi2IgfOxX30C_JZrO7_wI" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 30 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 30 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Œlœṣ⁾aeKe€ØCœpƊO%65%9Ḃj€-FSƝ1e
 </code></pre>
 <p>A monadic Link that accepts a list of the specified characters and yields <code>0</code> for valid or <code>1</code> for invalid.</p>
