--- a/q/274596.html
+++ b/q/274596.html
@@ -47,6 +47,7 @@
 <li>There should be a version of <code>gkY</code> but for regexes.</li>
 <li>I could probably add a builtin for <code>&quot;aeiouáéíóú&quot;</code>. If it were 2 bytes or shorter it would save bytes in this solution.</li>
 <li>This regex reminds me of the regex used <a href="https://codegolf.stackexchange.com/a/270277/56656">here</a>. There might be a way to systematize this a bit to save bytes.</li>
+<li>Just has <code>xay</code> has a string version there should be a string version of <code>nxy</code>.</li>
 </ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
