--- a/q/274596.html
+++ b/q/274596.html
@@ -26,12 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>078</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
+<tr d-ix="0"><td>071</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
 <tr d-ix="1"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
 <tr d-ix="2"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
 <tr d-ix="3"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 78 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 71 bytes</h1>
+<pre class="lang-haskell prettyprint-override"><code>g=[xys&quot;aou&quot;,so$nxy$W5,xys&quot;ei&quot;]
+</code></pre>
+<pre><code>pP(ah'$fo(rv g)++fo g)&lt;rmD&lt;&lt;skX&quot;ae_&quot;&lt;mtL
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=ZY-xTsMwEIb3PMXJqpSUtiMSQ8rEgoRQBySQqqo6yDm2asfFcSB9FpZ2QKgDUzfWSMysfRucNG2QWHz-Pt_9tt8-BOYLUmq9_5Z6aayD5wKV5JISmFhSRUJBezAJRiO4NQ5MBugMrMjV5k4QcKOUeZVZCr5XkabMoZMmywEtQV7LJjJAEcIYIr-eXfYDq68grDa1CjFscdsgHfGzQXnEXYPmiF8NFgcs_b58LxwfXeyv0_G0XOUMTcGGuell5ap3fz6sFUk2C_h4OYn8a3rcRPYF0v5gwI0vsQ-K43zxwJDmLNbupg380Sgzf0FiAgA9h2hpIQbe9wQwBaYIncCMNTwElhBaJ6qNtIRPAk9eIdV9rjO82mmB0p7EY7XFjtI0ZUGXqv5MWpJOqGrTTf4zWG2fTEdEuqXZ4V_r9aH-Ag" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h1>Alternate solution, 78 bytes</h1>
 <pre><code>fno(wR&quot;ita ati&quot;)&lt;fiw&lt;gkx&quot;(ae_|[eiéí]{i_|([^aeiouáéíóú]+){t_|.{a_)*&quot;&lt;mtL
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=ZY8xTsNAEEV7n2LYyoZATeHcgMKitYw1xLPeUdbesFkrSPZNaOwCIRdU6SjZU-Q2EBzFkahG7838L83bh8LtmrTuD1dcbYx18NKgZslUQGJJNwUFp0Xy3jh5e39I5FLWJtw9CnYI6FhEseRdXK5fRYiUdymxH_1n1nLehekTEpvGD0fl9_4ru4lal3d3LebRtYgr93Dq_a6Qa1hCYQKAKodwYyEGGf0SQApCEzqFtfjjBYiC0DrlB7aEK4Vnr5GOd2420u8rhWzP4tmPOFNZliKYW_VF0hI7pf0wJ_8Z9OPKTJRNn_T9NH8A" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -45,6 +51,7 @@
 <h1>Reflection</h1>
 <ul>
 <li>There should be a version of <code>gkY</code> but for regexes.</li>
+<li>There should be <code>pPX</code> but not for regexes. That is combine <code>pP</code> with <code>ah'</code>.</li>
 <li>I could probably add a builtin for <code>&quot;aeiouáéíóú&quot;</code>. If it were 2 bytes or shorter it would save bytes in this solution.</li>
 <li>This regex reminds me of the regex used <a href="https://codegolf.stackexchange.com/a/270277/56656">here</a>. There might be a way to systematize this a bit to save bytes.</li>
 <li>Just has <code>xay</code> has a string version there should be a string version of <code>nxy</code>.</li>
