--- a/q/153161.html
+++ b/q/153161.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>036</td><td>Easyfuck</td><td>240330T012000Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/272194#272194">Quadrupl</a></td></tr>
-<tr d-ix="1"><td>030</td><td>Perl 5</td><td>180214T221527Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/155796#155796">Xcali</a></td></tr>
-<tr d-ix="2"><td>021</td><td>Uiua  0.10.0</td><td>231106T141654Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/266535#266535">RomanPro</a></td></tr>
-<tr d-ix="3"><td>123</td><td>SNOBOL4 CSNOBOL4</td><td>180113T235240Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/153170#153170">Giuseppe</a></td></tr>
-<tr d-ix="4"><td>040</td><td>Zsh</td><td>231108T215645Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/266627#266627">GammaFun</a></td></tr>
-<tr d-ix="5"><td>040</td><td>Julia 1.0</td><td>231108T214123Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/266626#266626">MarcMush</a></td></tr>
-<tr d-ix="6"><td>7875</td><td>Vyxal j</td><td>231108T123439Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/266601#266601">lyxal</a></td></tr>
+<tr d-ix="0"><td>007</td><td>Vyxal j</td><td>231108T123439Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/266601#266601">lyxal</a></td></tr>
+<tr d-ix="1"><td>036</td><td>Easyfuck</td><td>240330T012000Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/272194#272194">Quadrupl</a></td></tr>
+<tr d-ix="2"><td>030</td><td>Perl 5</td><td>180214T221527Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/155796#155796">Xcali</a></td></tr>
+<tr d-ix="3"><td>021</td><td>Uiua  0.10.0</td><td>231106T141654Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/266535#266535">RomanPro</a></td></tr>
+<tr d-ix="4"><td>123</td><td>SNOBOL4 CSNOBOL4</td><td>180113T235240Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/153170#153170">Giuseppe</a></td></tr>
+<tr d-ix="5"><td>040</td><td>Zsh</td><td>231108T215645Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/266627#266627">GammaFun</a></td></tr>
+<tr d-ix="6"><td>040</td><td>Julia 1.0</td><td>231108T214123Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/266626#266626">MarcMush</a></td></tr>
 <tr d-ix="7"><td>4152</td><td>Deadfish~</td><td>210322T092150Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/221041#221041">emanresu</a></td></tr>
 <tr d-ix="8"><td>012</td><td>05AB1E</td><td>190521T102246Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/185922#185922">Kevin Cr</a></td></tr>
 <tr d-ix="9"><td>035</td><td>Perl 5</td><td>180713T120543Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/168510#168510">Dom Hast</a></td></tr>
@@ -81,7 +81,22 @@
 <tr d-ix="52"><td>009</td><td>Jelly</td><td>180113T233305Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/153166#153166">Dennis</a></td></tr>
 <tr d-ix="53"><td>050</td><td>R</td><td>180113T233257Z</td><td><a href="https://codegolf.stackexchange.com/questions/153161/confusing-alphabet-staircase/153165#153165">Giuseppe</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Quadruplay/easyfuck/wiki" rel="nofollow noreferrer">Easyfuck</a>, 36 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 7 bytes</h1>
+<pre><code>n¦ƛṫ~jp
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqIiwiIiwibsKmxpvhuat+anAiLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<h2>Explained</h2>
+<pre><code>n¦ƛṫ~jp­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁤⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌­
+n¦       # ‎⁡Prefixes of the alphabet
+  ƛ      # ‎⁢To each prefix:
+   ṫ     # ‎⁣  push prefix[:-1], prefix[-1]
+    ~j   # ‎⁤  without popping anything, join the long string on the short string
+      p  # ‎⁢⁡  and append prefix[-1]
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Quadruplay/easyfuck/wiki" rel="nofollow noreferrer">Easyfuck</a>, 36 bytes</h1>
 <pre>
 \ùòG<sup>EPA</sup>í½xÑZG×í½x¹ZGË¯Ýz<sup>SHY</sup>òGË<sup>PM</sup>&lt;¿v␄␘6Å␀ÿ
 </pre>
@@ -101,7 +116,7 @@
                                    AA[␊ initializer data
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 30 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 30 bytes</h1>
 <p>New method here shaves off a lot of the length.</p>
 
 <pre class="lang-perl prettyprint-override"><code>say$,=A;say A..$,++,''for A..Y
@@ -114,12 +129,12 @@
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/784sVJFz9bRGkgr5CYWqMTrqejpOOoBSW3t8ozMnFQVPcW6qP///@UXlGTm5xX/1/U11TMwNAAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <strike>0.1.0</strike> 0.10.0, 21 <a href="https://codegolf.stackexchange.com/questions/247669/i-want-8-bits-for-every-character/265917#265917">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <strike>0.1.0</strike> 0.10.0, 21 <a href="https://codegolf.stackexchange.com/questions/247669/i-want-8-bits-for-every-character/265917#265917">bytes</a></h1>
 <pre><code>∵(&amp;p+@A♭≡⊂⇡.)⇡26&amp;pf@A
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_10_0-dev_1__4oi1KCZwK0BB4pmt4omh4oqC4oehLinih6EyNiZwZkBBCg==" rel="nofollow noreferrer">See it in action</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="http://www.snobol4.org/csnobol4/" rel="nofollow noreferrer">SNOBOL4 (CSNOBOL4)</a>, <s>169</s> <s>143</s> <s>124</s> 123 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="http://www.snobol4.org/csnobol4/" rel="nofollow noreferrer">SNOBOL4 (CSNOBOL4)</a>, <s>169</s> <s>143</s> <s>124</s> 123 bytes</h1>
 <pre><code>&#9;L =LEN(1)
 &#9;OUTPUT ='A'
 I&#9;&amp;UCASE (ARB K L) . R L . S :F(END)
@@ -145,7 +160,7 @@ end
 <p>The problem here is the first line</p>
 <p>using <code>o s k</code> will add an extra <code>s</code>eparator character at the beginning of each line and also not have an <code>s</code> at the end. This is OK because line <code>t</code> will jump over the following two lines when <code>x=0</code>. This means that <code>o</code> will still be blank. Hence, <code>o s =</code> will remove the first <code>s</code> character from <code>o</code>, and then we can simply print <code>o s</code> to have the appropriate last <code>s</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 40 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 40 bytes</h1>
 
 <pre class="lang-sh prettyprint-override"><code>for c ({A..Z})&lt;&lt;&lt;${(pj:$c:)s}$c&amp;&amp;s+=($c)
 </code></pre>
@@ -158,29 +173,12 @@ end
     s+=($c)                # add $c to the end of the list $s
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 40 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 40 bytes</h1>
 
 <pre class="lang-julia prettyprint-override"><code>!_=[&quot;A&quot;;'B':'Z'.|&gt;i-&gt;join(('A':i-1).*i)]
 </code></pre>
 <p><a href="https://tio.run/##yyrNyUw0rPj/XzHeNlrJUcla3UndSj1KXa/GLlPXLis/M09DQ91R3SpT11BTTytTM/Z/SmZxQU5ipYaigeZ/AA" rel="nofollow noreferrer" title="Julia 1.0 – Try It Online">Try it online!</a></p>
 <p>function taking an unused argument and ouputing an array of strings</p>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 63 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 7.875 bytes</h1>
-<pre><code>n¦ƛṫv+∑∨
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIm7Cpsab4bmrdiviiJHiiKgiLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Bitstring:</p>
-<pre><code>100001100010111101100111000011000110100000111001111001111010011
-</code></pre>
-<h2>Explained</h2>
-<pre><code>n¦ƛṫv+∑∨­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌­
-n¦ƛ       # ‎⁡To the prefixes of the lowercase alphabet:
-   ṫv+    # ‎⁢  Add the tail to each character in (the prefix with the tail removed).
-      ∑   # ‎⁣  Convert to a single string
-       ∨  # ‎⁤  Special case the first a
-💎
-</code></pre>
-<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 <div id="pu7" class="pu"><h1>Deadfish~, 4152 bytes</h1>
 <pre><code>{i}cc{iiiii}iiiiic{ddddd}dddddc{iiiii}iiiiicic{ddddd}ddddddc{iiiii}iiiiiciicdcic{dddddd}iiic{iiiii}iiiiiciiicddciicdcic{dddddd}iic{iiiii}iiiiiciiiicdddciiicddciicdcic{dddddd}ic{iiiii}iiiiiciiiiicddddciiiicdddciiicddciicdcic{dddddd}c{iiiii}iiiiiciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{dddddd}dc{iiiii}iiiiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{dddddd}ddc{iiiii}iiiiic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{dddddd}dddc{iiiii}iiiiic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{dddddd}ddddc{iiiii}iiiiic{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{dddddd}dddddc{iiiii}iiiiic{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{dddddd}ddddddc{iiiii}iiiiic{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}iiic{iiiii}iiiiic{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}iic{iiiii}iiiiic{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}ic{iiiii}iiiiic{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}c{iiiii}iiiiic{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}dc{iiiii}iiiiic{ii}dddc{d}ddddddc{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}ddc{iiiii}iiiiic{ii}ddc{dd}iiic{ii}dddc{d}ddddddc{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}dddc{iiiii}iiiiic{ii}dc{dd}iic{ii}ddc{dd}iiic{ii}dddc{d}ddddddc{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}ddddc{iiiii}iiiiic{ii}c{dd}ic{ii}dc{dd}iic{ii}ddc{dd}iiic{ii}dddc{d}ddddddc{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}dddddc{iiiii}iiiiic{ii}ic{dd}c{ii}c{dd}ic{ii}dc{dd}iic{ii}ddc{dd}iiic{ii}dddc{d}ddddddc{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}iii}ddddddc{iiiii}iiiiic{ii}iic{dd}dc{ii}ic{dd}c{ii}c{dd}ic{ii}dc{dd}iic{ii}ddc{dd}iiic{ii}dddc{d}ddddddc{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}ii}iiic{iiiii}iiiiic{ii}iiic{dd}ddc{ii}iic{dd}dc{ii}ic{dd}c{ii}c{dd}ic{ii}dc{dd}iic{ii}ddc{dd}iiic{ii}dddc{d}ddddddc{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}ii}iic{iiiii}iiiiic{ii}iiiic{dd}dddc{ii}iiic{dd}ddc{ii}iic{dd}dc{ii}ic{dd}c{ii}c{dd}ic{ii}dc{dd}iic{ii}ddc{dd}iiic{ii}dddc{d}ddddddc{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}ii}ic{iiiii}iiiiic{ii}iiiiic{dd}ddddc{ii}iiiic{dd}dddc{ii}iiic{dd}ddc{ii}iic{dd}dc{ii}ic{dd}c{ii}c{dd}ic{ii}dc{dd}iic{ii}ddc{dd}iiic{ii}dddc{d}ddddddc{i}iiiiiic{d}dddddc{i}iiiiic{d}ddddc{i}iiiic{d}dddc{i}iiic{d}ddc{i}iic{d}dc{i}ic{d}c{i}c{d}ic{i}dc{d}iic{i}ddc{d}iiic{i}dddcddddddciiiiiicdddddciiiiicddddciiiicdddciiicddciicdcic{{d}ii}c
