--- a/q/274485.html
+++ b/q/274485.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>026</td><td>Desmos</td><td>240801T020454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274606#274606">Aiden Ch</a></td></tr>
-<tr d-ix="1"><td>025</td><td>Ruby</td><td>240731T180311Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274601#274601">int 21h </a></td></tr>
+<tr d-ix="0"><td>015</td><td>Ruby</td><td>240731T180311Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274601#274601">int 21h </a></td></tr>
+<tr d-ix="1"><td>026</td><td>Desmos</td><td>240801T020454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274606#274606">Aiden Ch</a></td></tr>
 <tr d-ix="2"><td>019</td><td>Kotlin 2.0.0</td><td>240731T143136Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274600#274600">colmmurp</a></td></tr>
 <tr d-ix="3"><td>022</td><td>Perl 5 + 0513pF</td><td>240728T204448Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274526#274526">Dom Hast</a></td></tr>
 <tr d-ix="4"><td>015</td><td>Perl 5 MListUtil=uniq pF</td><td>240729T152917Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274557#274557">Xcali</a></td></tr>
@@ -56,22 +56,23 @@
 <tr d-ix="27"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
 <tr d-ix="28"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 26 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 15 bytes</h1>
+<p>This version works with a list (conform to the rules):</p>
+<pre class="lang-ruby prettyprint-override"><code>-&gt;a{a.uniq[-1]}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGiNNulpSVpuhbrde0SqxP1SvMyC6N1DWNrIaI3lQsU0qKVHHWdHP0cfcCkn6Ouj6OTkl5xQU5miYa6umYsROmCBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 25 bytes</h1>
+<p>And this 25-byte anonymous function takes a <strong>string</strong> as its input, splits in characters and outputs the last unique element:</p>
+<pre class="lang-ruby prettyprint-override"><code>-&gt;a{a.split('').uniq[-1]}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGiNNulpSVpuhY7de0SqxP1igtyMks01NU19UrzMgujdQ1ja6HyBQpp0UqOuk6Ofo4-YNLPUdfH0UkpFiK_YAGEBgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 26 bytes</h1>
 <pre><code>f(L)=U[U.count]
 U=L.unique
 </code></pre>
 <p><a href="https://www.desmos.com/calculator/vr6e40chko" rel="nofollow noreferrer">Try It On Desmos!</a></p>
 <p><a href="https://www.desmos.com/calculator/ucm7bh261u" rel="nofollow noreferrer">Try It On Desmos! - Prettified</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 25 bytes</h1>
-<pre class="lang-ruby prettyprint-override"><code>-&gt;a{a.split('').uniq[-1]}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGiNNulpSVpuhY7de0SqxP1igtyMks01NU19UrzMgujdQ1ja6HyBQpp0UqOuk6Ofo4-YNLPUdfH0UkpFiK_YAGEBgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Or, for a relaxed input, simply -</p>
-<h2><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 15 bytes</h2>
-<pre class="lang-ruby prettyprint-override"><code>-&gt;a{a.uniq[-1]}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGiNNulpSVpuhbrde0SqxP1SvMyC6N1DWNrIaI3lQsU0qKVHHWdHP0cfcCkn6Ouj6OTkl5xQU5miYa6umYsROmCBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1>Kotlin 2.0.0, <s>26</s> 19 Bytes</h1>
 <pre><code>{LinkedHashSet(it).last()}
