--- a/q/274532.html
+++ b/q/274532.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>PARI/GP</td><td>240801T020553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274607#274607">alephalp</a></td></tr>
-<tr d-ix="1"><td>011</td><td>M</td><td>240729T183151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274562#274562">caird co</a></td></tr>
-<tr d-ix="2"><td>021</td><td>APLDyalog Unicode</td><td>240729T043716Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274543#274543">akamayu</a></td></tr>
-<tr d-ix="3"><td>038</td><td>Ruby</td><td>240729T094539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274550#274550">G B</a></td></tr>
+<tr d-ix="0"><td>035</td><td>Ruby</td><td>240729T094539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274550#274550">G B</a></td></tr>
+<tr d-ix="1"><td>043</td><td>PARI/GP</td><td>240801T020553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274607#274607">alephalp</a></td></tr>
+<tr d-ix="2"><td>011</td><td>M</td><td>240729T183151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274562#274562">caird co</a></td></tr>
+<tr d-ix="3"><td>021</td><td>APLDyalog Unicode</td><td>240729T043716Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274543#274543">akamayu</a></td></tr>
 <tr d-ix="4"><td>027</td><td>Charcoal</td><td>240729T063814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274546#274546">Neil</a></td></tr>
 <tr d-ix="5"><td>057</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
 <tr d-ix="6"><td>043</td><td>Raku Perl 6 rakudo</td><td>240729T001816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274533#274533">bb94</a></td></tr>
@@ -38,14 +38,20 @@
 <tr d-ix="9"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
 <tr d-ix="10"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 43 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>38</s> 35 bytes</h1>
+
+<pre class="lang-ruby prettyprint-override"><code>-&gt;n{(z=2)+(1..n).sum{|x|z/=2+1r/x}}
+</code></pre>
+<p><a href="https://tio.run/##KypNqvyfZvtf1y6vWqPK1khTW8NQTy9PU6@4NLe6pqKmSt/WSNuwSL@itvZ/gYKpXklmbmqxXm5igYZamuZ/AA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 43 bytes</h1>
 <pre><code>n-&gt;prod(i=0,n,[i+2*!i,!!i*k=2*i+1;0,k])[,2]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGSNAVbhaWlJWm6Fje183TtCoryUzQybQ108nSiM7WNtBQzdRQVM7WybY20MrUNrQ10smM1o3WMYqFaVNLyizTygEYY6igYGegoFBRl5pUABZQUdO2ARJpGnqamJkTtggUQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p><span class="math-container">\$1\$</span>-indexed.</p>
 <p>Using the fact that composition of linear fractional transformations (<span class="math-container">\$x\mapsto\frac{ax+b}{cx+d}\$</span>) corresponds to matrix multiplication. The <span class="math-container">\$n\$</span>-th output is <span class="math-container">\$\begin{bmatrix}2&amp;0\\0&amp;1\end{bmatrix}\begin{bmatrix}1&amp;3\\0&amp;3\end{bmatrix}\cdots\begin{bmatrix}n&amp;2n+1\\0&amp;2n+1\end{bmatrix}\begin{bmatrix}0\\1\end{bmatrix}\$</span>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/m" rel="nofollow noreferrer">M</a>, 11 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/m" rel="nofollow noreferrer">M</a>, 11 bytes</h1>
 <pre><code>RḤ‘İ×R×\S‘Ḥ
 </code></pre>
 <p><a href="https://tio.run/##y/3/P@jhjiWPGmYc2XB4etDh6THBQDZQ5H@QgfXh9kdNa/7/NwUA" rel="nofollow noreferrer" title="M – Try It Online">Try it online!</a></p>
@@ -65,7 +71,7 @@ R           - Generate the range [1, 2, ..., n]
           Ḥ - Unhalve; 2 + 2×1/3 + 2×1/3×2/5 + ...
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>31</strike> <strike>27</strike><strike>24</strike> 21 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu3" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>31</strike> <strike>27</strike><strike>24</strike> 21 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>It outputs the <span class="math-container">\$n\$</span>th term with the denominator comes before the numerator. Assumes <code>⎕io←0</code>. 24 -&gt; 21 bytes thanks to @att.</p>
 <pre><code>∊2(×∘(+⍀)⌿⊣@0,⍨¨1+×)⍳
 </code></pre>
@@ -73,12 +79,6 @@ R           - Generate the range [1, 2, ..., n]
 <p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NSDgUdsEYyOuR31TM/OBTAMA&amp;c=e9TRpXF4@qOOGRraj3obNB/1Ln3U0fWoZ7@Rg4HOo94Vh1YYagMlVmgCVTzq3QwA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGUnVpckpmbWJKaolCQqa6p86h36qEVh1Zk6hxaoQG0A2hBx4xHPXsPrcgCyQFlsoAOSAcKpgEVAZmG2o96NxsaAwA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! (24bytes)</a></p>
 <p><a href="https://razetime.github.io/APLgolf/?h=e9Q3taDgUdsEYwMA&amp;c=e9TRpXF4@qOOGRraj3obNB/1Ln3U0fWoZ7/Go66mR72bjTR1gCQQrzi0wlDbCKiyd7MmAA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGYramTqXNoxaPeqUCiY0Y6EKcdWpEJtMNA51HvZiMTAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! (27bytes)</a></p>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=qzZUMDo8/VFHV/Wj3l2Hp2s/6m141Lu19lHvUqDYo579hjqZOo96VxxaYagNVJf5qG3Co97NIBUA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGYramTqXNoRfqjjhlph1ZkAs020HnUu9nQFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! (31bytes)</a></p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 38 bytes</h1>
-
-<pre class="lang-ruby prettyprint-override"><code>-&gt;n{(z=2)+(1..n).sum{|x|z*=x/=x+x+1r}}
-</code></pre>
-<p><a href="https://tio.run/##KypNqvyfZvtf1y6vWqPK1khTW8NQTy9PU6@4NLe6pqKmSsu2Qt@2QrtC27CotvZ/gYKpXklmbmqxXm5igYZamuZ/AA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 27 bytes</h1>
 <pre><code>ＮθＩＥ²ΣＥ∨ι⊕θΠ⊕⊞ＯＥθ⎇‹νλν⊗⊕ν¬ι
