--- a/q/274596.html
+++ b/q/274596.html
@@ -26,12 +26,33 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>060</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
-<tr d-ix="1"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
-<tr d-ix="2"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
-<tr d-ix="3"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
+<tr d-ix="0"><td>054</td><td>Charcoal</td><td>240801T084735Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274612#274612">Neil</a></td></tr>
+<tr d-ix="1"><td>060</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
+<tr d-ix="2"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
+<tr d-ix="3"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
+<tr d-ix="4"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 60 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 54 bytes</h1>
+<pre><code>¹ＦＥＥ⪫⪪Ｓae¦a℅﹪℅↧ι¹³²⁻№]aoι№eiuvι«Ｆ∧ι∧№υ⁰№υ±ι⎚Ｆ↔ι≔⟦⟧υ⊞υι
+</code></pre>
+<p><a href="https://tio.run/##PU/BasMwDD2vX2FyUsCDdTvuVHLqWNpCj6MHNfESgbGCbXWHsY/Zt@zDPNsZE1gPSe89WcOMfmC0KZ08uQjb9nnzzl5Bj0t9L0wOzoulCHu3SDzHzJug1apB01Qoucs@OETjoedRLMPRj@TQwit/GD9gMEBt5m2fHtuCPTkJ0LHknc0FudGKis3aMCS32smhPjd39Uc7NwJpVWCliVYP/5pcHMyEse4pss4a9JDP@VNfA1tZx2oXAk0O3i5aSWGcJMzFgXLxldLVG4qz/flO9zf7Cw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> for valid, nothing if not. Explanation:</p>
+<pre><code>¹
+</code></pre>
+<p>Assume the word is valid.</p>
+<pre><code>ＦＥＥ⪫⪪Ｓae¦a℅﹪℅↧ι¹³²⁻№]aoι№eiuvι«
+</code></pre>
+<p>Replace <code>ae</code> in the input with <code>a</code>, then for each letter, lowercase it, then reduce its ordinal modulo <code>132</code>, which converts <code>á</code> to <code>]</code>, <code>ú</code> to <code>v</code> (which fortunately isn't a valid input) and the other accented letters to their base letter, then finally determine whether it's a broad vowel (mapped to <code>1</code>), a slender vowel (mapped to <code>-1</code>) or a consonant (mapped to <code>0</code>). Loop over the resulting list of letter types.</p>
+<pre><code>Ｆ∧ι∧№υ⁰№υ±ι⎚
+</code></pre>
+<p>If this is a vowel, the previous vowel was the other type of vowel, and there was an intervening consonant, then clear the canvas, marking the word as invalid.</p>
+<pre><code>Ｆ↔ι≔⟦⟧υ
+</code></pre>
+<p>If this is a vowel then clear any saved letter types.</p>
+<pre><code>⊞υι
+</code></pre>
+<p>Save the type of this letter.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 60 bytes</h1>
 <pre><code>pPX&quot;[ei][^aeiou]+[aou]|[aou][^aeiou]+[ei]&quot;&lt;rmD&lt;&lt;skX&quot;ae_&quot;&lt;mtL
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=ZY-xTsMwEIb3PMXJS1ogO0PaiRGhDgyVolAdzSW2asfFcUSReBOWdkCoA1M31kjMrH0bHCdtkFjO_j7f_0t---BYrUjK7fFbqLU2Fp5qlCIXlMHMkKwzCvqHWRBFcKct6BLQangh25p7TpBrKfWzKAtwu5IUlRat0GUFaAiqVvrKAHkIExi5eTEdB0bdQNjsWhVi2OPeI53w06M44cGjPuGXx7rDjbtv3mubR9fHaT5Zz-YsIZEmD0hC1-llgm6--jk4t8Bil47jajVnSAsWK3vbt_woFKVrzXQAoBYwWhuIIR87AkiASULLsWSer4BlhMbyZicM4ZLj2Uukds8OJm8OiqMwZ_HY7HGgoihYMLTKP0lDwnLZ7IbkP4PNfqkHIlI9pd2_ttvu_AU" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -52,7 +73,7 @@
 <li>Just has <code>xay</code> has a string version there should be a string version of <code>nxy</code>.</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
 <pre><code>ae|[aáoó]
 #@
 [eéiíuú]
@@ -76,13 +97,13 @@ i)1`(#|@)\w+\1
 <p>Check for consonants surrounded by vowels of different types (which equates to having surrounding symbols of the same type).</p>
 <p>Note that Retina defaults to the ISO-8859-1 code page so all of the Irish vowels only cost one byte.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
 <p>Inverted truthy and falsey.</p>
 <pre class="lang-perl prettyprint-override"><code>sub{s/ae/a/ig;$_=NFD$_;s/\pM//ug;s/[^aeiou]+/_/gi;/[aou]_[ei]|[ei]_[aou]/i}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VVLBbtswDAV25DfsIHhBkWJrfS3suWi7LsAwrDssPSWZwTi0LcCWMknGkKX9kl0SYD30vE_wV3RfM8pxs-wi8VGP5CPFn7-WZKrN01FjSTQuP4u9catkphcURTfa1FjJHxTXKzHIkwemnJw9fbTNfG1DpBBDWcSDNLkZXQ_S2IbT5acwbAq2Jl-RpG5mr8M0LGQcTpBBOiE5u_NH2uFQ3u9S_nnx0pe4cKZxpSQrEvHt-wQWhMaV7VYawqxEqHFhEFTDwLVbBQXqyiFkhEqhRelKAqvabV2yA_L2NxvSQIXk2MPMefuIBq4IOUwqgvJS-2uOVQXOEEFRFEx_39NnMXhVOVaWVs-i_GgKXeWszhfn-VhmawmXVx8AlSUNc0OspWq3gO1jpqHdUnd2gJMujVROBGPf7UpkaLnj4HTf_WkAI1_y30uvgB8g-D-c6UkSTRW73XCf4XhPmqrRLvaA1Wc7JL1rrNO1kGrZuAPqID0WuTbi7XkM_OnCrcHD4QX71zCXquZhDL-Mrz_fjt8Ekd-ggNMK4fdFFzwxXose2oTtV7wpPuuz03hKfnI-HNjO1wvi2IgfOxX30C_JZrO7_wI" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 30 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 30 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Œlœṣ⁾aeKe€ØCœpƊO%65%9Ḃj€-FSƝ1e
 </code></pre>
 <p>A monadic Link that accepts a list of the specified characters and yields <code>0</code> for valid or <code>1</code> for invalid.</p>
