--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240801T084855Z
+"   /golfscore                                      20240801T100958Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/124242.html">What do you get when you multiply 6 by 9? (42)  : 0124242</a>
 <a href="q/274532.html">Rabinowitz-Wagon \$\pi\$ formula                : 0274532</a>
 <a href="q/274596.html">Is this a valid Irish word?                     : 0274596</a>
 <a href="q/245318.html">Draw the Ukrainian Flag                         : 0245318</a>
